bugfix: поправить ошибки в классах и интерфейсах, добавить модификаторы доступа, переделать реализацию методов, поправить code style