@@ -2,21 +2,27 @@ package com.yandex.app.service;
 
 import com.yandex.app.model.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private List<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history = new LinkedList<>();
+    private static final byte MAX_HISTORY_SIZE = 10;
+
     @Override
     public void add(Task task) {
+        if (task == null) {
+            return;
+        }
         history.add(task);
-        if (history.size() > 9) {
-            history.remove(0);
+        if (history.size() > MAX_HISTORY_SIZE) {
+            history.removeFirst();
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        return history;
+        List<Task> historyCopy = List.copyOf(history);
+        return historyCopy;
     }
 }
